# ChessNet

./: .gitignore  CMakeLists.txt  ChessCommon.hpp  Initiator.cpp  NetTranslator.h  README.md  board.hpp  build-ChessNet-GUI.sh  build2.sh  chess_client.cpp  chess_grandmaster_minimax  chess_grandmaster_minimax.cpp  chess_server.cpp  clientConnect.cpp  clientConnect.hpp  game.hpp  pieces.hpp  player.hpp  setupServer.cpp
include/: CMakeLists.txt  CMakelists.txt  ChessCommon.hpp  NetTranslator.h  board.hpp  bundle.cpp  clientConnect.hpp  commonWindows.hpp  easylogging++.cc  game.hpp  gameTile.hpp  gameWindow.hpp  pieces.hpp  player.hpp  setupServer.hpp
include/QtUI/: CMakeLists.txt  ChessCommon.hpp  NetTranslator.h  board.hpp  chess_client.cpp  chess_server.cpp  connectClient.cpp  connectClientWindow.hpp  gameTile.hpp  gameWindow.cpp  gameWindow.hpp  main.cpp  moves.h  setupServer.cpp  setupServer.hpp
include/QtUI/network/: NetConnection.h  NetMessage.h  NetServer.h
include/network/: NetClient.h  NetCommon.h  NetServer.h  Net_TSQueue.h  Network.h  SimpleClient  SimpleClient.cpp  SimpleServer  SimpleServer.cpp  bundle.cpp
network/: CMakeLists.txt  NetClient.h  NetCommon.h  NetConnection.h  NetMessage.h  NetServer.h  Net_TSQueue.h  build_net  bundle.cpp  simple_server.cpp  simpleclient.cpp
network/temp/: SimpleClient  SimpleClient.cpp  SimpleServer  SimpleServer.cpp  net_common.h
src/: Initiator.cpp  chess_client.cpp  chess_server.cpp  clientConnect.cpp  gameWindow.cpp  main.cpp  setupServer.cpp
